feat: add javscript function for audio playback

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="assets/img/favicon.ico"
+      type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" />
@@ -19,6 +24,8 @@
       <a href="#">Portfolio</a>
       <a href="#">Contact</a>
     </nav>
+    <button id="start">Play</button>
+    <button id="stop">Stop</button>
     <div class="container">
       <div class="About mb-3">
         <h2>About Me</h2>
@@ -34,20 +41,29 @@
         <h2 class="mb-3">Portfolio</h2>
         <div class="mb-3">
           <h3 class="mb-2">Project 1</h3>
-          <img
-            src="https://github.com/KimBergstroem/keyboardmaker-Ecommerce-Fullstack-App/blob/main/docs/readme.md/readme-header.png?raw=true"
-            alt="Project 1" />
+          <a
+            href="https://github.com/KimBergstroem/keyboardmaker-Ecommerce-Fullstack-App"
+            target="_blank"
+            ><img
+              src="https://github.com/KimBergstroem/keyboardmaker-Ecommerce-Fullstack-App/blob/main/docs/readme.md/readme-header.png?raw=true"
+              alt="Project 2"
+          /></a>
           <p>Ecommerce project app</p>
         </div>
         <div class="mb-3">
           <h3 class="mb-2">Project 2</h3>
-          <img
-            src="https://github.com/KimBergstroem/gamers_insight-CRUD-Blog-App/blob/main/docs/readme.md/readme-header.png?raw=true"
-            alt="Project 2" />
+          <a
+            href="https://github.com/KimBergstroem/gamers_insight-CRUD-Blog-App"
+            target="_blank"
+            ><img
+              src="https://github.com/KimBergstroem/gamers_insight-CRUD-Blog-App/blob/main/docs/readme.md/readme-header.png?raw=true"
+              alt="Project 2"
+          /></a>
           <p>Blog application for gamers</p>
         </div>
       </div>
     </div>
+    <audio data-key="8" src="assets/audio/8bitarn.wav"></audio>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
