style: color and icon to play sound button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
+    <script
+      src="https://kit.fontawesome.com/66c113ad0a.js"
+      crossorigin="anonymous"></script>
     <link
       rel="shortcut icon"
       href="assets/img/favicon.ico"
@@ -24,10 +27,11 @@
       <a href="#">Portfolio</a>
       <a href="#">Contact</a>
     </nav>
-    <button id="start">Play</button>
-    <button id="stop">Stop</button>
+    <button id="start" class="toggle" title="Toggle Play">
+      <i class="fas fa-play"></i>
+    </button>
     <div class="container">
-      <div class="About mb-3">
+      <div class="about mb-3">
         <h2>About Me</h2>
         <p>
           About Me I'm Kim Bergström, a passionate and creative web developer
@@ -36,7 +40,7 @@
           deep love for retro gaming and enjoy streaming on Twitch.
         </p>
       </div>
-      <div class="Portfolio">
+      <div class="portfolio">
         <hr />
         <h2 class="mb-3">Portfolio</h2>
         <div class="mb-3">
@@ -46,7 +50,7 @@
             target="_blank"
             ><img
               src="https://github.com/KimBergstroem/keyboardmaker-Ecommerce-Fullstack-App/blob/main/docs/readme.md/readme-header.png?raw=true"
-              alt="Project 2"
+              alt="project 2"
           /></a>
           <p>Ecommerce project app</p>
         </div>
@@ -57,7 +61,7 @@
             target="_blank"
             ><img
               src="https://github.com/KimBergstroem/gamers_insight-CRUD-Blog-App/blob/main/docs/readme.md/readme-header.png?raw=true"
-              alt="Project 2"
+              alt="project 2"
           /></a>
           <p>Blog application for gamers</p>
         </div>
