style: color and bg img to nav and header section

--- a/week1-labs/index.html
+++ b/week1-labs/index.html
@@ -9,12 +9,13 @@
       content="IronSkydive Company as skydiving school" />
     <meta name="keywords" content="IronSkydive, Dive, Skydive, Sky" />
     <meta name="author" content="IronHack-Kim B" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>IronSkydive</title>
   </head>
 
   <body>
     <!-- Navigation links -->
-    <nav>
+    <nav class="nav-bar">
       <ul>
         <li><a href="#structure">Day Structure</a></li>
         <li><a href="#team">Team</a></li>
@@ -23,21 +24,21 @@
     </nav>
 
     <!-- Site Header with logo and introduction -->
-    <header>
+    <header class="header-bg">
       <h1>
         <img
           src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png"
           alt="IronSkydive Logo" />IronSkydive
       </h1>
       <h2>Let the trip begin</h2>
-      <aside>
+      <aside class="quote">
         <i>"The best experience of our lives"</i>
         <p>Ariel Quiónes & Gonzalo Manrique, Ironhack Founders</p>
       </aside>
     </header>
 
     <!-- Main Section: Welcome, About Us, Join Us -->
-    <section>
+    <section id="general-information">
       <!-- Welcome Article -->
       <article>
         <h3>Hello!</h3>
