add: implement comprehensive CSS styling classes into HTML elements

--- a/week1-labs/index.html
+++ b/week1-labs/index.html
@@ -38,26 +38,26 @@
     </header>
 
     <!-- Main Section: Welcome, About Us, Join Us -->
-    <section id="general-information">
+    <section id="general-information" class="dark-background">
       <!-- Welcome Article -->
       <article>
         <h3>Hello!</h3>
         <p>Welcome to IronSkydive, the best adventure you will ever have.</p>
-        <a href="#">Learn More</a>
+        <a href="#" class="link-btn">Learn More</a>
       </article>
 
       <!-- About Us Article -->
       <article>
         <h3>About us</h3>
         <p>We like programming websites, but we also love to practice sport.</p>
-        <a href="#">Watch Video</a>
+        <a href="#" class="link-btn">Watch Video</a>
       </article>
 
       <!-- Join Us Article -->
       <article>
         <h3>Wanna join?</h3>
         <p>Join our fitness program to be in good shape while learning.</p>
-        <a href="#">Register</a>
+        <a href="#" class="link-btn">Register</a>
       </article>
     </section>
 
@@ -65,7 +65,7 @@
     <section id="structure">
       <h3>How do we structure the day?</h3>
       <div>
-        <article>
+        <article class="service-box">
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png"
             alt="Training Logo" />
@@ -75,7 +75,7 @@
             problems.
           </p>
         </article>
-        <article>
+        <article class="service-box">
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png"
             alt="Get ready Logo" />
@@ -85,7 +85,7 @@
             All sizes available.
           </p>
         </article>
-        <article>
+        <article class="service-box">
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png"
             alt="Fly Logo" />
@@ -95,7 +95,7 @@
             fly!
           </p>
         </article>
-        <article>
+        <article class="service-box">
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png"
             alt="Jump Logo" />
@@ -106,30 +106,30 @@
     </section>
 
     <!-- Team Members Section -->
-    <section id="team">
+    <section id="team" class="dark-background">
       <h3>Team</h3>
-      <p>
+      <p class="section-text">
         Our team collectively has 75 years of experience. Odds are, when you
         jump out of the plane with these professionals, you won't go splat.
       </p>
       <hr />
       <div>
         <article>
-          <h4>Name</h4>
+          <h4 class="member-name">Name</h4>
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg"
             alt="Team member 1" />
           Team member 1
         </article>
         <article>
-          <h4>Name</h4>
+          <h4 class="member-name">Name</h4>
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg"
             alt="Team member 2" />
           Team member 2
         </article>
         <article>
-          <h4>Name</h4>
+          <h4 class="member-name">Name</h4>
           <img
             src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg"
             alt="Team member 3" />
@@ -188,10 +188,10 @@
     </section>
 
     <!-- Contact and Social Media Links -->
-    <footer>
+    <footer class="dark-background footer">
       <section>
         <h5>Contact Information</h5>
-        <address>
+        <address class="address">
           IronSkydive 33<br />
           Rue la Fayette,<br />
           75009 Paris,<br />
