--- a/week1-labs/index.html
+++ b/week1-labs/index.html
@@ -24,117 +24,132 @@
     </nav>
 
     <!-- Site Header with logo and introduction -->
-    <header class="header-bg">
-      <h1>
+    <header class="header header-bg">
+      <div class="header-content">
         <img
           src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png"
-          alt="IronSkydive Logo" />IronSkydive
-      </h1>
+          alt="IronSkydive Logo" />
+        <h1>IronSkydive</h1>
+      </div>
       <h2>Let the trip begin</h2>
-      <aside class="quote">
+      <aside class="header-quote">
         <i>"The best experience of our lives"</i>
         <p>Ariel Quiónes & Gonzalo Manrique, Ironhack Founders</p>
       </aside>
     </header>
 
-    <!-- Main Section: Welcome, About Us, Join Us -->
+    <!-- General information Section -->
     <section id="general-information" class="dark-background">
-      <!-- Welcome Article -->
-      <article>
-        <h3>Hello!</h3>
-        <p>Welcome to IronSkydive, the best adventure you will ever have.</p>
-        <a href="#" class="link-btn">Learn More</a>
-      </article>
+      <div class="articles-wrapper">
+        <!-- Welcome Article -->
+        <article>
+          <h3>Hello!</h3>
+          <p>Welcome to IronSkydive, the best adventure you will ever have.</p>
+          <a href="#" class="link-btn">Learn More</a>
+        </article>
 
-      <!-- About Us Article -->
-      <article>
-        <h3>About us</h3>
-        <p>We like programming websites, but we also love to practice sport.</p>
-        <a href="#" class="link-btn">Watch Video</a>
-      </article>
+        <!-- About Us Article -->
+        <article>
+          <h3>About us</h3>
+          <p>
+            We like programming websites, but we also love to practice sport.
+          </p>
+          <a href="#" class="link-btn">Watch Video</a>
+        </article>
 
-      <!-- Join Us Article -->
-      <article>
-        <h3>Wanna join?</h3>
-        <p>Join our fitness program to be in good shape while learning.</p>
-        <a href="#" class="link-btn">Register</a>
-      </article>
+        <!-- Join Us Article -->
+        <article>
+          <h3>Wanna join?</h3>
+          <p>Join our fitness program to be in good shape while learning.</p>
+          <a href="#" class="link-btn">Register</a>
+        </article>
+      </div>
     </section>
 
     <!-- Day Structure Section -->
     <section id="structure">
       <h3>How do we structure the day?</h3>
-      <div>
-        <article class="service-box">
-          <img
-            src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png"
-            alt="Training Logo" />
-          <h4>1. Training</h4>
-          <p>
-            We teach all necessary things to jump from the plane without any
-            problems.
-          </p>
-        </article>
-        <article class="service-box">
-          <img
-            src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png"
-            alt="Get ready Logo" />
-          <h4>2. Get ready</h4>
-          <p>
-            You are already prepared, you just need the suit and a parachute.
-            All sizes available.
-          </p>
-        </article>
-        <article class="service-box">
-          <img
-            src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png"
-            alt="Fly Logo" />
-          <h4>3. Fly</h4>
-          <p>
-            You are ready, and the plane is waiting for us in the hangar. Let's
-            fly!
-          </p>
-        </article>
-        <article class="service-box">
-          <img
-            src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png"
-            alt="Jump Logo" />
-          <h4>4. Jump!</h4>
-          <p>You have done the most complicated. Just one step left... jump!</p>
-        </article>
+      <div class="structure-container">
+        <div class="structure-wrapper">
+          <article class="service-box">
+            <img
+              src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png"
+              alt="Training Logo" />
+            <h4>1. Training</h4>
+            <p>
+              We teach all necessary things to jump from the plane without any
+              problems.
+            </p>
+          </article>
+          <article class="service-box">
+            <img
+              src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png"
+              alt="Get ready Logo" />
+            <h4>2. Get ready</h4>
+            <p>
+              You are already prepared, you just need the suit and a parachute.
+              All sizes available.
+            </p>
+          </article>
+          <article class="service-box">
+            <img
+              src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png"
+              alt="Fly Logo" />
+            <h4>3. Fly</h4>
+            <p>
+              You are ready, and the plane is waiting for us in the hangar.
+              Let's fly!
+            </p>
+          </article>
+          <article class="service-box">
+            <img
+              src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png"
+              alt="Jump Logo" />
+            <h4>4. Jump!</h4>
+            <p>
+              You have done the most complicated. Just one step left... jump!
+            </p>
+          </article>
+        </div>
       </div>
     </section>
 
     <!-- Team Members Section -->
     <section id="team" class="dark-background">
-      <h3>Team</h3>
-      <p class="section-text">
-        Our team collectively has 75 years of experience. Odds are, when you
-        jump out of the plane with these professionals, you won't go splat.
-      </p>
-      <hr />
-      <div>
-        <article>
-          <h4 class="member-name">Name</h4>
-          <img
-            src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg"
-            alt="Team member 1" />
-          Team member 1
-        </article>
-        <article>
-          <h4 class="member-name">Name</h4>
-          <img
-            src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg"
-            alt="Team member 2" />
-          Team member 2
-        </article>
-        <article>
-          <h4 class="member-name">Name</h4>
-          <img
-            src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg"
-            alt="Team member 3" />
-          Team member 3
-        </article>
+      <div class="team-container">
+        <div class="team-wrapper">
+          <h3>Team</h3>
+          <p class="section-text">
+            Our team collectively has 75 years of experience. Odds are, when you
+            jump out of the plane with these professionals, you won't go splat.
+          </p>
+          <hr />
+        </div>
+      </div>
+      <div class="member-container">
+        <div class="member-wrapper">
+          <article class="member-box">
+            <h4 class="member-name">Harold Rothstien</h4>
+            <img
+              src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg"
+              alt="Team member 1" />
+            Team member 1
+          </article>
+          <article class="member-box">
+            <h4 class="member-name">Susan Phillips</h4>
+            <img
+              src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg"
+              alt="Team member 2" />
+            Team member 2
+          </article>
+          <article class="member-box">
+            <h4 class="member-name">Taylor Roberts</h4>
+            <img
+              src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg"
+              alt="Team member 3" />
+            Team member 3
+          </article>
+        </div>
       </div>
     </section>
 
@@ -183,7 +198,6 @@
           </tr>
         </tbody>
       </table>
-
       <h3>Schedule a Time Slot</h3>
     </section>
 
@@ -204,6 +218,17 @@
           <li><a href="#" target="_blank">Facebook</a></li>
           <li><a href="#" target="_blank">Instagram</a></li>
         </ul>
+      </section>
+
+      <section class="map-container">
+        <iframe
+          width="700"
+          height="350"
+          style="border: 0"
+          loading="lazy"
+          allowfullscreen
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17598.439804703707!2d2.374791065371947!3d48.869038866439915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e38f817b573%3A0x48d69c30470e7aeb!2sIronhack%20Paris!5e0!3m2!1ssv!2ses!4v1712676304143!5m2!1ssv!2ses">
+        </iframe>
       </section>
     </footer>
   </body>
