feat(add): form to structure section in html, styled and responsive in css

--- a/week1-labs/index.html
+++ b/week1-labs/index.html
@@ -156,49 +156,87 @@
     <!-- Schedule Section -->
     <section id="schedule">
       <h3>Schedule</h3>
-      <table>
-        <thead>
-          <tr>
-            <th>Time</th>
-            <th>Monday</th>
-            <th>Tuesday</th>
-            <th>Wednesday</th>
-            <th>Thursday</th>
-            <th>Friday</th>
-            <th>Saturday</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>9:00 - 11:00</td>
-            <td></td>
-            <td></td>
-            <td>X</td>
-            <td></td>
-            <td>X</td>
-            <td>X</td>
-          </tr>
-          <tr>
-            <td>12:00 - 14:00</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>X</td>
-            <td>X</td>
-          </tr>
-          <tr>
-            <td>15:00 - 17:00</td>
-            <td></td>
-            <td></td>
-            <td>X</td>
-            <td>X</td>
-            <td>X</td>
-            <td>X</td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="table-wrapper">
+        <table>
+          <thead>
+            <tr>
+              <th>Time</th>
+              <th>Monday</th>
+              <th>Tuesday</th>
+              <th>Wednesday</th>
+              <th>Thursday</th>
+              <th>Friday</th>
+              <th>Saturday</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>9:00 - 11:00</td>
+              <td></td>
+              <td></td>
+              <td>X</td>
+              <td></td>
+              <td>X</td>
+              <td>X</td>
+            </tr>
+            <tr>
+              <td>12:00 - 14:00</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>X</td>
+              <td>X</td>
+            </tr>
+            <tr>
+              <td>15:00 - 17:00</td>
+              <td></td>
+              <td></td>
+              <td>X</td>
+              <td>X</td>
+              <td>X</td>
+              <td>X</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
       <h3>Schedule a Time Slot</h3>
+      <div class="form">
+        <form action="/action_page.php" class="form">
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Your email.."
+              required />
+          </div>
+
+          <div class="form-group">
+            <label for="participants">Participants:</label>
+            <input
+              type="number"
+              id="participants"
+              name="participants"
+              placeholder="Number of participants"
+              required />
+          </div>
+
+          <div class="form-group">
+            <label for="date">Date:</label>
+            <input type="date" id="date" name="date" required />
+          </div>
+
+          <div class="form-group">
+            <label for="time">Time:</label>
+            <input type="time" id="time" name="time" required />
+          </div>
+
+          <button type="submit">Submit</button>
+        </form>
+      </div>
     </section>
 
     <!-- Contact and Social Media Links -->
