add: content and assesment project description to html page

--- a/index.html
+++ b/index.html
@@ -32,19 +32,32 @@
     </button>
     <div class="container">
       <div class="about mb-3">
-        <h2>About Me</h2>
+        <h2>ABOUT ME</h2>
         <p>
-          About Me I'm Kim Bergström, a passionate and creative web developer
-          from Sweden who loves to make people laugh. My goal is to bring joy to
-          the world through my funny websites and applications. I also have a
-          deep love for retro gaming and enjoy streaming on Twitch.
+          I'm Kim Bergström, a passionate and creative web developer from Sweden
+          who loves to make people laugh. My goal is to bring joy to the world
+          through my funny websites and applications. I also have a deep love
+          for retro gaming and enjoy streaming on Twitch.
         </p>
       </div>
       <div class="portfolio">
         <hr />
-        <h2 class="mb-3">Portfolio</h2>
+        <h2 class="mb-3">ASSESMENT IRONHACK</h2>
         <div class="mb-3">
-          <h3 class="mb-2">Project 1</h3>
+          <h3 class="mb-2">Html & Css Website</h3>
+          <a
+            href="https://github.com/KimBergstroem/ironhack-bootcamp/tree/main/week1-labs"
+            target="_blank"
+            ><img src="assets/img/week1.png" alt="project 2"
+          /></a>
+          <p>Single page web application with html and css</p>
+        </div>
+      </div>
+      <div class="portfolio">
+        <hr />
+        <h2 class="mb-3">MY OWN PORTFOLIO</h2>
+        <div class="mb-3">
+          <h3 class="mb-2">Showcase 1</h3>
           <a
             href="https://github.com/KimBergstroem/keyboardmaker-Ecommerce-Fullstack-App"
             target="_blank"
@@ -52,10 +65,10 @@
               src="https://github.com/KimBergstroem/keyboardmaker-Ecommerce-Fullstack-App/blob/main/docs/readme.md/readme-header.png?raw=true"
               alt="project 2"
           /></a>
-          <p>Ecommerce project app</p>
+          <p>Advance Ecommerce project app</p>
         </div>
         <div class="mb-3">
-          <h3 class="mb-2">Project 2</h3>
+          <h3 class="mb-2">Showcase 2</h3>
           <a
             href="https://github.com/KimBergstroem/gamers_insight-CRUD-Blog-App"
             target="_blank"
